Updated Email link and text in footer
Updated emil link and text in footer

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackGitIcon.svg" alt="GitHub Logo">
                         <b class="footerContentText">@Josh-Giles</b>
                   </a>
-                  <a href="mailto:enquiries@joshgiles.dev" class="footerLink">
+                  <a href="mailto:email@joshgiles.co.uk" class="footerLink">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackMailIcon.svg" alt="Mail Logo">
-                        <b class="footerContentText">enquiries@joshgiles.dev</b>
+                        <b class="footerContentText">email@joshgiles.co.uk</b>
                   </a>
             </section>
       </footer>
