alt tga on about me image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                   <div class="sectiontextContainer">
                         <p class="sectionText">
-                              <img class="sectionImage" src="PersonalSite/AboutMe.jpg" />
+                              <img class="sectionImage" src="PersonalSite/AboutMe.jpg" alt="About Me Image"/>
                               Hi, I’m Josh and I'm a software development apprentice from Swindon. I use modern CSS
                               techniques
                               such as flexbox to create responsive websites. As i come from an e-commerce development
