--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             <section class="footerContentContainer">
                   <a href="https://github.com/Josh-Giles" class="footerLink">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackGitIcon.svg" alt="GitHub Logo">
-                        <b class="footerContentText">@Josh-Giles</b>
+                        <span class="footerContentText">@Josh-Giles</span>
                   </a>
                   <a href="mailto:email@joshgiles.co.uk" class="footerLink">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackMailIcon.svg" alt="Mail Logo">
-                        <b class="footerContentText">email@joshgiles.co.uk</b>
+                        <span class="footerContentText">email@joshgiles.co.uk</span>
                   </a>
             </section>
       </footer>
