added smooth scrolling when about me link is clicked and have also began implementationof the 'Technologies section'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <h1 class="headerText">Josh Giles</h1>
                   <h2 class="headerSubText">Web Development Apprentice</h2>
             </div>
-            
+
       </header>
 
       <section id="AboutMe" class="gutters">
@@ -40,7 +40,7 @@
 
                   <div class="sectiontextContainer">
                         <p class="sectionText">
-                              <img class="sectionImage" src="PersonalSite/AboutMe.jpg" alt="About Me Image"/>
+                              <img class="sectionImage" src="PersonalSite/AboutMe.jpg" alt="About Me Image" />
                               Hi, I’m Josh and I'm a software development apprentice from Swindon. I use modern CSS
                               techniques
                               such as flexbox to create responsive websites. As i come from an e-commerce development
@@ -68,13 +68,32 @@
                         </p>
                   </div>
             </section>
+
+            <section class="sectionContainer sectionContainer--PinkBG">
+
+                  <h2 class="sectionHeader sectionHeader--Blue">TECHNOLOGIES I ENJOY</h2>
+
+                  <p class="sectionText sectionText--padding">
+                        I really enjoy using HTML, CSS and JavaScript with jQuery to create modern sleek front end
+                        layouts. I am aiming to master these technologies and then go on to master the more modern
+                        frontend libraries as well such as Angular and React. As i’m sure you can tell from this
+                        website, I personally really like dark backgrounds with bold contrasting colours on top.
+                        <br/>
+                        <br/>
+                        I use modern CSS techniques such as flexbox to create responsive websites. As i come from an
+                        e-commerce development background i have a focus on building clear and concise user experiences
+                        to guide users through systems.
+                  </p>
+
+            </section>
+
       </section>
 
 
 
       <footer class="footer">
             <section class="footerContentContainer">
-                  <a href="https://github.com/Josh-Giles" class="footerLink">
+                  <a href="https://github.com/Josh-Giles" class="footerLink" target="_blank">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackGitIcon.svg" alt="GitHub Logo">
                         <span class="footerContentText">@Josh-Giles</span>
                   </a>
