Adjusted teh animations slightly and made the new secton mobiel friendly

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <section class="sectionContainer sectionContainer--PinkBG">
 
-                  <h2 class="sectionHeader sectionHeader--Blue">TECHNOLOGIES I ENJOY</h2>
+                  <h2 class="sectionHeader--Blue">TECHNOLOGIES I ENJOY</h2>
 
                   <p class="sectionText sectionText--padding">
                         I really enjoy using HTML, CSS and JavaScript with jQuery to create modern sleek front end
