Began working on time line and removed som unfinished features ready for implementation later

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
       <header class="headerContainer">
             <nav class="headerNav">
-                  <a class="navLink" href="#AboutMe">About Me</a>
-                  <a class="navLink" href="#">Timeline</a>
+                  <a class="navLink" href="/index.html#AboutMe">About Me</a>
+                  <a class="navLink" href="/timeLine.html">Timeline</a>
             </nav>
 
             <picture>
@@ -40,7 +40,7 @@
             <h2 class="sectionHeader">ABOUT ME</h2>
             <section class="sectionContainer">
 
-                  <div class="sectiontextContainer" onclick="showAllContent(this)">
+                  <div class="sectiontextContainer">
                         <p class="sectionText">
                               <img class="sectionImage" src="PersonalSite/AboutMe.jpg" alt="About Me Image" />
                               Hi, I’m <span class="highlightText">Josh</span> and I'm a <span class="highlightText">software development apprentice from Swindon</span>. I use modern CSS
