Further implemented the time line page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <header class="headerContainer">
             <nav class="headerNav">
-                  <a class="navLink" href="/index.html#AboutMe">About Me</a>
+                  <a class="navLink navLinkSelected" href="/index.html#AboutMe">About Me</a>
                   <a class="navLink" href="/timeLine.html">Timeline</a>
             </nav>
 
@@ -99,9 +99,9 @@
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackGitIcon.svg" alt="GitHub Logo">
                         <span class="footerContentText">@Josh-Giles</span>
                   </a>
-                  <a href="mailto:email@joshgiles.co.uk" class="footerLink">
+                  <a href="#" class="footerLink">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackMailIcon.svg" alt="Mail Logo">
-                        <span class="footerContentText">email@joshgiles.co.uk</span>
+                        <span class="footerContentText">Contact Me</span>
                   </a>
             </section>
       </footer>
