--- a/timeLine.html
+++ b/timeLine.html
@@ -16,8 +16,8 @@
 
       <header class="headerContainer">
             <nav class="headerNav">
-                  <a class="navLink" href="/index.html#AboutMe">About Me</a>
-                  <a class="navLink" href="/timeLine.html">Timeline</a>
+                  <a class="navLink" href="/index.html">About Me</a>
+                  <a class="navLink navLinkSelected" href="/timeLine.html">Timeline</a>
             </nav>
 
             <picture>
@@ -41,9 +41,10 @@
             <h2 class="sectionHeader">Previous Employment</h2>
 
             <!--Things on the left of timeline line-->
-            <div class="timelineSection">
-                  <div class=timelineCard>
-                        <h2 class=timeLineHeader>Mega Motorcycle Store</h2>
+            <div class="timeLineSection">
+                  
+                  <div class="timelineCard">
+                        <h2 class=timeLineHeader>Mega Motorcycle Store</h2>                       
                         <p class=timeLineCardtext>
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies odio eu
                               euismod efficitur. Quisque lacinia auctor semper. Cras lobortis turpis neque, eget
@@ -53,7 +54,26 @@
                               lacinia auctor semper. Cras lobortis turpis neque, eget accumsan dolor tincidunt in.
                               Praesent sed mattis lorem, aliquam malesuada ligula. In hac habitasse platea dictumst.
                               Aenean scelerisque nisl est
-                        </p>
+                        </p>  
+                  </div>
+
+                  <div class="timeLineDivider">
+                        <!--Keep this div not empty!-->
+                  </div>
+                  
+
+                  <div class="timelineCard">
+                        <h2 class=timeLineHeader>Mega Motorcycle Store</h2>                       
+                        <p class=timeLineCardtext>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies odio eu
+                              euismod efficitur. Quisque lacinia auctor semper. Cras lobortis turpis neque, eget
+                              accumsan dolor tincidunt in. Praesent sed mattis lorem, aliquam malesuada ligula. In hac
+                              habitasse platea dictumst. Aenean scelerisque nisl est Lorem ipsum dolor sit amet,
+                              consectetur adipiscing elit. Curabitur ultricies odio eu euismod efficitur. Quisque
+                              lacinia auctor semper. Cras lobortis turpis neque, eget accumsan dolor tincidunt in.
+                              Praesent sed mattis lorem, aliquam malesuada ligula. In hac habitasse platea dictumst.
+                              Aenean scelerisque nisl est
+                        </p>  
                   </div>
             </div>
 
@@ -69,9 +89,9 @@
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackGitIcon.svg" alt="GitHub Logo">
                         <span class="footerContentText">@Josh-Giles</span>
                   </a>
-                  <a href="mailto:email@joshgiles.co.uk" class="footerLink">
+                  <a href="#" class="footerLink">
                         <img class="footerContentImage" src="PersonalSite/Icons/SVG/BlackMailIcon.svg" alt="Mail Logo">
-                        <span class="footerContentText">email@joshgiles.co.uk</span>
+                        <span class="footerContentText">Contact Me</span>
                   </a>
             </section>
       </footer>
