--- a/timeLine.html
+++ b/timeLine.html
@@ -5,6 +5,9 @@
 <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Hi, my names Josh and I am a web developer from Swindon. Why not come and have a look at my portfolio?">
+      <meta name="keywords" content="Josh Giles, Josh Giles Web Developer, Josh Giles Swindon, Josh Giles Portfolio, Web Developer Swindon">
+      <meta name="author" content="Josh Giles">
       <title>Josh Giles - Web Developer</title>
       <link rel="stylesheet" href="Home.css">
       <link rel="stylesheet" href="timeLine.css">
