--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <meta name="description" content="Hi, my names Josh and I am a web developer from Swindon. Why not come and have a look at my portfolio?">
       <meta name="keywords" content="Josh Giles, Josh Giles Web Developer, Josh Giles Swindon, Josh Giles Portfolio, Web Developer Swindon">
       <meta name="author" content="Josh Giles">
+      <link rel='shortcut icon' type='image/x-icon' href='PersonalSite/Icons/ICO/favicon.ico' />
       <title>Josh Giles - Web Developer</title>
       <link rel="stylesheet" href="Home.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
