SEO related chnages
Removed duplicate descriptions and title pages

--- a/timeLine.html
+++ b/timeLine.html
@@ -5,11 +5,11 @@
 <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Hi, my names Josh and I am a web developer from Swindon. Why not come and have a look at my portfolio?">
+      <meta name="description" content="View Josh Giles previous experience as a web developer.">
       <meta name="keywords" content="Josh Giles, Josh Giles Web Developer, Josh Giles Swindon, Josh Giles Portfolio, Web Developer Swindon">
       <meta name="author" content="Josh Giles">
       <link rel='shortcut icon' type='image/x-icon' href='PersonalSite/Icons/ICO/favicon.ico' />
-      <title>Josh Giles - Web Developer</title>
+      <title>Josh Giles - Web Developer | Previous Experience</title>
       <link rel="stylesheet" href="Home.css">
       <link rel="stylesheet" href="timeLine.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -42,7 +42,7 @@
       </header>
 
       <section class="gutters">
-            <h2 class="sectionHeader">Previous Employment</h2>
+            <h2 class="sectionHeader">Previous Experience</h2>
 
             <!--Things on the left of timeline line-->
             <div class="timeLineSection">
