--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="keywords" content="Josh Giles, Josh Giles Web Developer, Josh Giles Swindon, Josh Giles Portfolio, Web Developer Swindon">
       <meta name="author" content="Josh Giles">
       <link rel='shortcut icon' type='image/x-icon' href='PersonalSite/Icons/ICO/favicon.ico' />
-      <title>Josh Giles - Web Developer</title>
+      <title>Josh Giles - Web Developer | Home Page</title>
       <link rel="stylesheet" href="Home.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="Home.js"></script>
