Minor design refinemnets to timeline
Just some minor design refinements to the timeline

--- a/timeLine.html
+++ b/timeLine.html
@@ -41,7 +41,7 @@
 
       </header>
 
-      <section class="gutters">
+      <section class="gutters timeLinePage">
             <h2 class="sectionHeader">Previous Experience</h2>
            
             <section class="timelineSection" attr-employmentdate="11/03/2017">
