Updates to timeline
Added actual information related to my first job role and also updated some styling

--- a/timeLine.html
+++ b/timeLine.html
@@ -44,18 +44,15 @@
       <section class="gutters timeLinePage">
             <h2 class="sectionHeader">Previous Experience</h2>
            
-            <section class="timelineSection" attr-employmentdate="11/03/2017">
+            <section class="timelineSection" attr-employmentdate="March 2017">
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">Mega Motorcycle Store</h1>
                         <p class="timelineSection-Description">
-                              This is just a long paragraph to be hinest waht i'm typing is nto at all relevant, all i'm trying to do is fill space so there are probably even typos. 
-                              It is just demo text it is not real. I'm still tying right now just so that I can fill up even more space.
-                              this is just a long paragraph to be hinest waht i'm typing is nto at all relevant, all i'm trying to do is fill space so there are probably even typos. 
-                              It is just demo text it is not real. I'm still tying right now just so that I can fill up even more space.
-                              this is just a long paragraph to be hinest waht i'm typing is nto at all relevant, all i'm trying to do is fill space so there are probably even typos. 
-                              It is just demo text it is not real. I'm still tying right now just so that I can fill up even more space.
-                              this is just a long paragraph to be hinest waht i'm typing is nto at all relevant, all i'm trying to do is fill space so there are probably even typos. 
-                              It is just demo text it is not real. I'm still tying right now just so that I can fill up even more space. 
+                              This was my part time job whilst I was studying at school and college. This job initially entailed helping members of the public
+                              with purchasing decisions related to motorcycle accesories and protective clothing. As time went on I took on additional responsibilities
+                              such as aftersales support and even took a course so that I was certified to provide support and sales for a cutting edge air bag system.
+                              I really enjoyed this job as it enabled me to explore my interest in motorcycling while also helping to build up my soft skills such as 
+                              communication and organisation. 
                         </p>
                   </div>
             </section>
