--- a/timeLine.html
+++ b/timeLine.html
@@ -43,19 +43,72 @@
 
       <section class="gutters timeLinePage">
             <h2 class="sectionHeader">Previous Experience</h2>
-           
-            <section class="timelineSection" attr-employmentdate="March 2017">
+
+            <section class="timelineSection" attr-employmentdate="September 2012 - July 2017">
                   <div class="timelineSection-InnerContent">
-                        <h1 class="timelineSection-Title">Mega Motorcycle Store</h1>
+                        <h1 class="timelineSection-Title">Nova Hreod Academy</h1>
                         <p class="timelineSection-Description">
-                              This was my part time job whilst I was studying at school and college. This job initially entailed helping members of the public
-                              with purchasing decisions related to motorcycle accesories and protective clothing. As time went on I took on additional responsibilities
-                              such as aftersales support and even took a course so that I was certified to provide support and sales for a cutting edge air bag system.
-                              I really enjoyed this job as it enabled me to explore my interest in motorcycling while also helping to build up my soft skills such as 
-                              communication and organisation. 
+                              I attended school at nova hreod academy with an aspiration to actively pursue a career in
+                              computer science. At this time I didn’t know exactly what I wanted to do with in computer
+                              science however, I already knew that I enjoyed programming as I had began making small
+                              games in python and gradually began adding visual elements to them with the TKinter
+                              module. I also knew that communication skills would be vital in any computer science based
+                              role so I decided to develop these skills by volunteering for a prefect role so that I
+                              could help organise events and communicate with other students within the school in order
+                              to organise everything from promotional events at the end of year prom. This helped me to
+                              build soft skills which i believe are highly beneficial in my carrer today. In 2017 my 
+                              time at Nova Hreod Academy was drawing to a close and I am proud to say that I was presented with an award for 
+                              <a class="timelineLink" target="_blank"href="https://www.novahreodacademy.org.uk/news-and-events/latest-news/gcse-presentation-evening-8">attainment in Computer Science.</a>
                         </p>
                   </div>
             </section>
+
+            <section class="timelineSection" attr-employmentdate="Work Experience 2015">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">Nationwide HQ</h1>
+                        <p class="timelineSection-Description">
+                              Whilsts studying at Nova Hreod Academy I decided that I would like to do some work experience
+                              related to my field of interest. I was able to find a placement at the Nationwide Headquarters and was
+                              able to get my school to agree to give me a week away from school for this placement. Whilst working for
+                              Nationwide I had the opportunity to debug issues with system and even implement some patches into there
+                              system which ran in VB.net. I really enjoyed this work palcement as it gave me my first glimpse into the
+                              reality of programming and from here on out my primary goal was to work towards finding a software 
+                              development role.                             
+                        </p>
+                  </div>
+            </section>
+
+            <section class="timelineSection" attr-employmentdate="September 2017 - July 2019">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">New College Swindon</h1>
+                        <p class="timelineSection-Description">
+                              After graduating from Nova Hreod Academy i decided to continue my learning by doing a BTEC
+                              in software development at New college Swindon. During my time here I completed multiple
+                              assignments ranging from Cybersecurity and social media marketing all the way to Human
+                              computer interaction and project management. Whilst studying at new college I had a role
+                              in proactively helping other students with software development and programming as i have
+                              always enjoyed mentoring others and handing down what i know.
+                        </p>
+                  </div>
+            </section>
+
+            <section class="timelineSection" attr-employmentdate="March 2017 - July 2019">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">Mega Motorcycle Store</h1>
+                        <p class="timelineSection-Description">
+                              This was my part time job whilst I was studying at school and college. This job initially
+                              entailed helping members of the public
+                              with purchasing decisions related to motorcycle accesories and protective clothing. As
+                              time went on I took on additional responsibilities
+                              such as aftersales support and even took a course so that I was certified to provide
+                              support and sales for a cutting edge air bag system.
+                              I really enjoyed this job as it enabled me to explore my interest in motorcycling while
+                              also helping to build up my soft skills such as
+                              communication and organisation.
+                        </p>
+                  </div>
+            </section>
+
       </section>
 
 
