Added more info to timeline
Info about TSS Development Job added to timeline

--- a/timeLine.html
+++ b/timeLine.html
@@ -109,6 +109,23 @@
                   </div>
             </section>
 
+            <section class="timelineSection" attr-employmentdate="July 2019 - Present">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">T-Shirt Studio</h1>
+                        <p class="timelineSection-Description">
+                              After leaving college I obtained an apprenticeship placement with t-Shirt Studio and I am
+                              currently working towards the Level 4 Software Developer Standard. This apprenticeship has
+                              been an amazing opportunity and continues to provide me with the real life software development
+                              experience which I have wanted ever since I started studying Computer Science.
+                        </p>
+                        <p class="timelineSection-Description">
+                              During my time at T-Shirt Studio I have learnt how to develop webapps in both MVC and windows forms
+                              and have become far more fluent in c# and OOP in general. I have also had the opportunity to use SQL
+                              databases and create stored procedures in SQL 
+                        </p>
+                  </div>
+            </section>
+
       </section>
 
 
