Flipped orinetation of timeline

--- a/timeLine.html
+++ b/timeLine.html
@@ -44,50 +44,19 @@
       <section class="gutters timeLinePage">
             <h2 class="sectionHeader">Previous Experience</h2>
 
-            <section class="timelineSection" attr-employmentdate="September 2012 - July 2017">
+            <section class="timelineSection" attr-employmentdate="July 2019 - Present">
                   <div class="timelineSection-InnerContent">
-                        <h1 class="timelineSection-Title">Nova Hreod Academy</h1>
+                        <h1 class="timelineSection-Title">T-Shirt Studio</h1>
                         <p class="timelineSection-Description">
-                              I attended school at nova hreod academy with an aspiration to actively pursue a career in
-                              computer science. At this time I didn’t know exactly what I wanted to do with in computer
-                              science however, I already knew that I enjoyed programming as I had began making small
-                              games in python and gradually began adding visual elements to them with the TKinter
-                              module. I also knew that communication skills would be vital in any computer science based
-                              role so I decided to develop these skills by volunteering for a prefect role so that I
-                              could help organise events and communicate with other students within the school in order
-                              to organise everything from promotional events at the end of year prom. This helped me to
-                              build soft skills which i believe are highly beneficial in my carrer today. In 2017 my 
-                              time at Nova Hreod Academy was drawing to a close and I am proud to say that I was presented with an award for 
-                              <a class="timelineLink" target="_blank"href="https://www.novahreodacademy.org.uk/news-and-events/latest-news/gcse-presentation-evening-8">attainment in Computer Science.</a>
+                              After leaving college I obtained an apprenticeship placement with t-Shirt Studio and I am
+                              currently working towards the Level 4 Software Developer Standard. This apprenticeship has
+                              been an amazing opportunity and continues to provide me with the real life software development
+                              experience which I have wanted ever since I started studying Computer Science.
                         </p>
-                  </div>
-            </section>
-
-            <section class="timelineSection" attr-employmentdate="Work Experience 2015">
-                  <div class="timelineSection-InnerContent">
-                        <h1 class="timelineSection-Title">Nationwide HQ</h1>
                         <p class="timelineSection-Description">
-                              Whilsts studying at Nova Hreod Academy I decided that I would like to do some work experience
-                              related to my field of interest. I was able to find a placement at the Nationwide Headquarters and was
-                              able to get my school to agree to give me a week away from school for this placement. Whilst working for
-                              Nationwide I had the opportunity to debug issues with system and even implement some patches into there
-                              system which ran in VB.net. I really enjoyed this work palcement as it gave me my first glimpse into the
-                              reality of programming and from here on out my primary goal was to work towards finding a software 
-                              development role.                             
-                        </p>
-                  </div>
-            </section>
-
-            <section class="timelineSection" attr-employmentdate="September 2017 - July 2019">
-                  <div class="timelineSection-InnerContent">
-                        <h1 class="timelineSection-Title">New College Swindon</h1>
-                        <p class="timelineSection-Description">
-                              After graduating from Nova Hreod Academy i decided to continue my learning by doing a BTEC
-                              in software development at New college Swindon. During my time here I completed multiple
-                              assignments ranging from Cybersecurity and social media marketing all the way to Human
-                              computer interaction and project management. Whilst studying at new college I had a role
-                              in proactively helping other students with software development and programming as i have
-                              always enjoyed mentoring others and handing down what i know.
+                              During my time at T-Shirt Studio I have learnt how to develop webapps in both MVC and windows forms
+                              and have become far more fluent in C# and OOP in general. I have also had the opportunity to use SQL
+                              databases and create stored procedures in SQL.
                         </p>
                   </div>
             </section>
@@ -109,19 +78,50 @@
                   </div>
             </section>
 
-            <section class="timelineSection" attr-employmentdate="July 2019 - Present">
+            <section class="timelineSection" attr-employmentdate="September 2017 - July 2019">
                   <div class="timelineSection-InnerContent">
-                        <h1 class="timelineSection-Title">T-Shirt Studio</h1>
+                        <h1 class="timelineSection-Title">New College Swindon</h1>
                         <p class="timelineSection-Description">
-                              After leaving college I obtained an apprenticeship placement with t-Shirt Studio and I am
-                              currently working towards the Level 4 Software Developer Standard. This apprenticeship has
-                              been an amazing opportunity and continues to provide me with the real life software development
-                              experience which I have wanted ever since I started studying Computer Science.
+                              After graduating from Nova Hreod Academy i decided to continue my learning by doing a BTEC
+                              in software development at New college Swindon. During my time here I completed multiple
+                              assignments ranging from Cybersecurity and social media marketing all the way to Human
+                              computer interaction and project management. Whilst studying at new college I had a role
+                              in proactively helping other students with software development and programming as i have
+                              always enjoyed mentoring others and handing down what i know.
                         </p>
+                  </div>
+            </section>
+
+            <section class="timelineSection" attr-employmentdate="Work Experience 2015">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">Nationwide HQ</h1>
                         <p class="timelineSection-Description">
-                              During my time at T-Shirt Studio I have learnt how to develop webapps in both MVC and windows forms
-                              and have become far more fluent in c# and OOP in general. I have also had the opportunity to use SQL
-                              databases and create stored procedures in SQL 
+                              Whilsts studying at Nova Hreod Academy I decided that I would like to do some work experience
+                              related to my field of interest. I was able to find a placement at the Nationwide Headquarters and was
+                              able to get my school to agree to give me a week away from school for this placement. Whilst working for
+                              Nationwide I had the opportunity to debug issues with system and even implement some patches into there
+                              system which ran in VB.net. I really enjoyed this work palcement as it gave me my first glimpse into the
+                              reality of programming and from here on out my primary goal was to work towards finding a software 
+                              development role.                             
+                        </p>
+                  </div>
+            </section>
+
+            <section class="timelineSection" attr-employmentdate="September 2012 - July 2017">
+                  <div class="timelineSection-InnerContent">
+                        <h1 class="timelineSection-Title">Nova Hreod Academy</h1>
+                        <p class="timelineSection-Description">
+                              I attended school at nova hreod academy with an aspiration to actively pursue a career in
+                              computer science. At this time I didn’t know exactly what I wanted to do with in computer
+                              science however, I already knew that I enjoyed programming as I had began making small
+                              games in python and gradually began adding visual elements to them with the TKinter
+                              module. I also knew that communication skills would be vital in any computer science based
+                              role so I decided to develop these skills by volunteering for a prefect role so that I
+                              could help organise events and communicate with other students within the school in order
+                              to organise everything from promotional events at the end of year prom. This helped me to
+                              build soft skills which i believe are highly beneficial in my carrer today. In 2017 my 
+                              time at Nova Hreod Academy was drawing to a close and I am proud to say that I was presented with an award for 
+                              <a class="timelineLink" target="_blank"href="https://www.novahreodacademy.org.uk/news-and-events/latest-news/gcse-presentation-evening-8">attainment in Computer Science.</a>
                         </p>
                   </div>
             </section>
