--- a/timeLine.html
+++ b/timeLine.html
@@ -48,15 +48,15 @@
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">T-Shirt Studio</h1>
                         <p class="timelineSection-Description">
-                              After leaving college I obtained an apprenticeship placement with t-Shirt Studio and I am
-                              currently working towards the Level 4 Software Developer Standard. This apprenticeship has
-                              been an amazing opportunity and continues to provide me with the real life software development
-                              experience which I have wanted ever since I started studying Computer Science.
+                              After leaving college I obtained an apprenticeship placement with T-Shirt Studio and I am
+                              <span class="highlightText">currently working towards the Level 4 Software Developer Standard.</span> This apprenticeship has
+                              been an amazing opportunity and continues to provide me with the real life software
+                              development experience which I have wanted ever since I started studying Computer Science.
                         </p>
                         <p class="timelineSection-Description">
-                              During my time at T-Shirt Studio I have learnt how to develop webapps in both MVC and windows forms
-                              and have become far more fluent in C# and OOP in general. I have also had the opportunity to use SQL
-                              databases and create stored procedures in SQL.
+                              During my time at T-Shirt Studio I have <span class="highlightText">learnt how to develop webapps</span> in both <span class="highlightText">MVC</span> and
+                              <span class="highlightText">windows forms</span> and have become far more fluent in <span class="highlightText">C# and OOP</span> in general. I have also had
+                              the opportunity to use <span class="highlightText">SQL</span> databases and create <span class="highlightText">stored procedures</span> in SQL
                         </p>
                   </div>
             </section>
@@ -65,15 +65,13 @@
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">Mega Motorcycle Store</h1>
                         <p class="timelineSection-Description">
-                              This was my part time job whilst I was studying at school and college. This job initially
-                              entailed helping members of the public
-                              with purchasing decisions related to motorcycle accesories and protective clothing. As
-                              time went on I took on additional responsibilities
-                              such as aftersales support and even took a course so that I was certified to provide
-                              support and sales for a cutting edge air bag system.
-                              I really enjoyed this job as it enabled me to explore my interest in motorcycling while
-                              also helping to build up my soft skills such as
-                              communication and organisation.
+                              This was my <span class="highlightText">part time job whilst I was studying</span> at school and college. This job initially
+                              entailed helping members of the public with purchasing decisions related to motorcycle
+                              accessories and protective clothing. However, as time went on I <span class="highlightText">took on additional
+                              responsibilities</span> such as <span class="highlightText">after sales support and even took a course so that I was
+                              certified to provide support and sales for a cutting edge air bag system.</span> I really enjoyed
+                              this job as it enabled me to explore my interest in motorcycling while also helping to
+                              build up my <span class="highlightText">soft skills such as communication and organisation.</span>
                         </p>
                   </div>
             </section>
@@ -82,12 +80,16 @@
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">New College Swindon</h1>
                         <p class="timelineSection-Description">
-                              After graduating from Nova Hreod Academy i decided to continue my learning by doing a BTEC
-                              in software development at New college Swindon. During my time here I completed multiple
-                              assignments ranging from Cybersecurity and social media marketing all the way to Human
-                              computer interaction and project management. Whilst studying at new college I had a role
-                              in proactively helping other students with software development and programming as i have
-                              always enjoyed mentoring others and handing down what i know.
+                              After graduating from Nova Hreod Academy I decided to continue my learning by doing a <span class="highlightText">BTEC
+                              in software development</span> at New college Swindon. During my time here I <span class="highlightText">completed multiple
+                              assignments</span> ranging from <span class="highlightText">Cybersecurity</span> and <span class="highlightText">Social Media Marketing</span> all the way to <span class="highlightText">Human
+                              Computer Interaction</span> and <span class="highlightText">project management.</span>
+                        </p>
+                        <p class="timelineSection-Description">
+                              Whilst studying at new college I was <span class="highlightText">asked by one of my lecturers to help out with
+                              teaching some classes to students from the year below.</span> I really enjoyed doing this as it
+                              <span class="highlightText">allowed me to help other people to achieve their goals while also helping to reinforce my
+                              knowledge</span> by finding the optimal way to teach.
                         </p>
                   </div>
             </section>
@@ -96,13 +98,19 @@
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">Nationwide HQ</h1>
                         <p class="timelineSection-Description">
-                              Whilsts studying at Nova Hreod Academy I decided that I would like to do some work experience
-                              related to my field of interest. I was able to find a placement at the Nationwide Headquarters and was
-                              able to get my school to agree to give me a week away from school for this placement. Whilst working for
-                              Nationwide I had the opportunity to debug issues with system and even implement some patches into there
-                              system which ran in VB.net. I really enjoyed this work palcement as it gave me my first glimpse into the
-                              reality of programming and from here on out my primary goal was to work towards finding a software 
-                              development role.                             
+                              Whilsts studying at Nova Hreod Academy I decided that I would like to do some work
+                              experience related to computing as I knew this was my main field of interest. I was able
+                              to <span class="highlightText">find a placement at the Nationwide Headquarters in the Special Investigations
+                              Technology department</span> and was able to get my school to agree to give me a week away from
+                              school for this placement.
+                        </p>
+
+                        <p class="timelineSection-Description">
+                              <span class="highlightText">Whilst working for Nationwide I had the opportunity to debug issues with the system and
+                              even implement some patches</span> into their system which ran in <span class="highlightText">VB.net.</span> I really enjoyed this
+                              work placement as it gave me my first glimpse into the reality of programming in a
+                              workplace and from here on out it was my primary to work towards finding a software
+                              development role.
                         </p>
                   </div>
             </section>
@@ -111,17 +119,23 @@
                   <div class="timelineSection-InnerContent">
                         <h1 class="timelineSection-Title">Nova Hreod Academy</h1>
                         <p class="timelineSection-Description">
-                              I attended school at nova hreod academy with an aspiration to actively pursue a career in
-                              computer science. At this time I didn’t know exactly what I wanted to do with in computer
-                              science however, I already knew that I enjoyed programming as I had began making small
+                              I attended school at nova hreod academy with an<span class="highlightText">aspiration to actively pursue a career in
+                              computer science.</span> At this time I didn’t know exactly what kind of role I wanted with
+                              computing however, I already knew that I enjoyed programming as <span class="highlightText">I had begun making small
                               games in python and gradually began adding visual elements to them with the TKinter
-                              module. I also knew that communication skills would be vital in any computer science based
-                              role so I decided to develop these skills by volunteering for a prefect role so that I
-                              could help organise events and communicate with other students within the school in order
-                              to organise everything from promotional events at the end of year prom. This helped me to
-                              build soft skills which i believe are highly beneficial in my carrer today. In 2017 my 
-                              time at Nova Hreod Academy was drawing to a close and I am proud to say that I was presented with an award for 
-                              <a class="timelineLink" target="_blank"href="https://www.novahreodacademy.org.uk/news-and-events/latest-news/gcse-presentation-evening-8">attainment in Computer Science.</a>
+                              module.</span>
+                        </p>
+                        <p class="timelineSection-Description">
+                              I also <span class="highlightText">knew that communication skills would be vital</span> in any computer science based role so
+                              I <span class="highlightText">decided to develop these skills by volunteering for a prefect role</span> so that I could help
+                              organise events and communicate with other students within the school in order to organise
+                              everything from promotional events to the end of year prom. This <span class="highlightText">helped me to build soft
+                              skills</span> which I believe are highly beneficial in my career today. In 2017 my time at Nova
+                              Hreod Academy was drawing to a close and I am proud to say that I was presented with an
+                              award for
+                              <a class="timelineLink" target="_blank"
+                                    href="https://www.novahreodacademy.org.uk/news-and-events/latest-news/gcse-presentation-evening-8">attainment
+                                    in Computer Science.</a>
                         </p>
                   </div>
             </section>
